<resources>
    <string name="app_name">St.Thomas COC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">church@stthomascoc.com</string>
    <string name="username">St. Thomas The Hermit Coptic Orthodox Church</string>


    <string name="main">MAIN</string>
    <string name="main2">MAIN2</string>
    <string name="announcements">Announcements</string>
    <string name="service_schedule">Service Schedule</string>
    <string name="readings">Readings</string>
    <string name="spiritual_word">Spiritual Word</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="sunday">Sunday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="liturgy">Divine Liturgy: 8am</string>
    <string name="sunday_school">Sunday School: 5pm</string>
    <string name="j_h_h_s_meeting">J.H. + H.S. Meeting: 7:15pm</string>
    <string name="bible_study">Bible Study: 7:15pm</string>
    <string name="midnight_praises">Midnight Praises: 8pm</string>
    <string name="hymns_class">Hymns Class: 11:45am</string>
    <string name="vespers">Vespers: 6:30pm</string>
    <string name="pre_servants">Pre-Servants Class: 1pm</string>
    <string name="spiritual_notes">My Spiritual Notebook</string>
    <string name="altar_sch">Altar Schedule</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">PROCEED</string>

    <string name="slide_1_title">Church Announcements</string>
    <string name="slide_1_desc">Get the latest church news</string>

    <string name="slide_2_title">Service Schedule</string>
    <string name="slide_2_desc">Know when services are held each week</string>

    <string name="slide_3_title">Lectionary</string>
    <string name="slide_3_desc">View the readings of the day</string>
    <string name="news">news</string>


</resources>
