<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/announcements"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_date_range"
            android:title="@string/service_schedule"/>
        <item
            android:id="@+id/nav_readings"
            android:icon="@drawable/ic_today"
            android:title="@string/readings"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_queue_music"
            android:title="@string/spiritual_word" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
