<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.coc.stthomas.stthomascoc.ScheduleFragment">

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calendarView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:text="@string/liturgy"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:text="@string/sunday_school"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:text="@string/j_h_h_s_meeting"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:text="@string/bible_study"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:text="@string/midnight_praises"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignRight="@+id/textView9"
        android:layout_alignEnd="@+id/textView9" />

    <TextView
        android:text="@string/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="Friday"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:layout_alignBottom="@+id/calendarView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:text="@string/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:layout_alignBottom="@+id/calendarView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:text="@string/liturgy"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:text="@string/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        tools:text="Sunday"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="serif"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:text="@string/hymns_class"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:text="@string/vespers"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:text="@string/pre_servants"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="serif"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15" />

</RelativeLayout>
